修改部分内容, 删除原作者内容

--- a/_config.yml
+++ b/_config.yml
@@ -15,17 +15,15 @@ author:
   name: 零下十一度
   email: zanghongtu2006@gmail.com
   link: http://www.zanghongtu.com/
-  weibo: http://weibo.com/u/1662536394
-  github: https://github.com/lemonjing
+  github: https://github.com/zanghongtu2006
   github_username:  zanghongtu2006
   github_page: zanghongtu2006.github.io
-  netease: https://music.163.com/#/user/home?id=63589002
   weibo_username:  零下十一度
 
 # 站点信息
 title: 零度空间
 description: 
- If,<br/>for example,<br/>you come at four o'clock in the afternoon,<br/>then at three o'clock I shall begin to be happy.
+ 但行好事, 莫问前程
 rss_url: /feed.xml
 
 # gavatar头像及Favicon
