--- a/_config.yml
+++ b/_config.yml
@@ -32,16 +32,16 @@ plugins:
 
 # 导航（可按需增删）
 nav:
-  - title: 首页
+  - title: Home
     url: /
-  - title: 归档
+  - title: Archive
     url: /archive/
-  - title: 分类
+  - title: Categories
     url: /categories/
-  - title: 标签
+  - title: Tag
     url: /tags/
-  - title: 页面
-    url: /pages/
+  - title: About Me
+    url: /pages/e5-8d-9a-e4-b8-bb-e7-ae-80-e4-bb-8b/
 
 # 让 GitHub Pages 识别中文 slug
 kramdown:
