--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ plugins:
 nav:
   - title: Home
     url: /
-  - title: Archive
-    url: /archive/
-  - title: Categories
-    url: /categories/
+#  - title: Archive
+#    url: /archive/
+#  - title: Categories
+#    url: /categories/
   - title: Tag
     url: /tags/
   - title: About Me
